feat: add pie-chart

--- a/projects/circle-chart/src/lib/circle-chart.component.html
+++ b/projects/circle-chart/src/lib/circle-chart.component.html
@@ -27,7 +27,7 @@
     <ng-content select=".icon"></ng-content>
   </div>
 	<div class="text-wrapper">
-		<p #text class="text-data">{{ sizeValue }}</p>
+		<p #text class="text-data"></p>
 		<p class="text-hint">{{ inputParams.current | kbToSizePostfix }}</p>
 	</div>
 </div>
