--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,8 @@
 <div class="mb-15">
   <kd-line-chart [params]="chartParam"></kd-line-chart>
 </div>
+<div class="mb-15">
+  <kd-pie-chart [params]="pieChartParam">
+    <span class="text-hint">всего доступно для раздачи</span>
+  </kd-pie-chart>
+</div>
