feat: change line-charts to rectangle

--- a/projects/line-chart/src/lib/line-chart.component.scss
+++ b/projects/line-chart/src/lib/line-chart.component.scss
@@ -3,11 +3,10 @@ svg {
   height: 50px;
 }
 
-.line-background {
-  z-index: 1;
+.rect-background {
+  fill: #E5E5E5;
 }
 
-.line-progress {
-  stroke-dasharray: 0 100;
-  z-index: 2;
+.rect-progress {
+  fill: black;
 }
