--- a/projects/pie-chart/src/lib/additional-line-chart/additional-line-chart.component.html
+++ b/projects/pie-chart/src/lib/additional-line-chart/additional-line-chart.component.html
@@ -3,28 +3,27 @@
   (@animateClick.done)="onClickEventDone()"
   viewBox="0 0 100 15"
 >
-  <line
-    x1="0"
-    y1="0"
-    x2="100"
-    y2="0"
-    class="line-background"
-    stroke="#E5E5E5"
-    stroke-width="15"
-    fill-opacity="0"
+  <rect
+    class="rect-background"
+    x="0"
+    y="0"
+    rx="1"
+    ry="1"
+    width="100px"
+    height="10px"
   />
-  <line
+  <rect
     [@animateFilling]="{
       value: currentState,
       params: { stopValue: stopValue }
     }"
-    x1="0"
-    y1="0"
-    x2="100"
-    y2="0"
-    class="line-progress"
-    [attr.stroke]="inputParams.color"
-    stroke-width="15"
-    fill-opacity="0"
+    class="rect-progress"
+    x="0"
+    y="0"
+    rx="1"
+    ry="1"
+    width="0"
+    height="10px"
+    [style.fill]="inputParams.color"
   />
 </svg>
