--- a/projects/pie-chart/src/lib/additional-line-chart/additional-line-chart.component.scss
+++ b/projects/pie-chart/src/lib/additional-line-chart/additional-line-chart.component.scss
@@ -3,12 +3,6 @@ svg {
   height: 50px;
 }
 
-.line-background {
-  border-radius: 10%;
-  z-index: 1;
-}
-
-.line-progress {
-  stroke-dasharray: 0 100;
-  z-index: 2;
+.rect-background {
+  fill: #E5E5E5;
 }
